# Interdisciplinary_Project

./: .gitignore  README.md  expose.md  notes.txt  pyproject.toml  report.tex
logs/data_profiling/: binary_sensor_stats.csv  data_quality.csv  event_activations.csv  event_inventory.csv  full_stats.csv  high_correlation_pairs.csv  label_vocabularies.json  operational_state_analysis.csv  schema.json
logs/phase1/: timestamp_gaps.csv
logs/phase2/: cluster_decision.txt  leakage_audit.txt  prefailure_summary.txt  recover_skipped.txt
models/phase1/: cluster_labels.json  kinematic_scaler.joblib  pca.joblib  scaled_feature_names.json  standard_scaler.joblib  window_scaler.joblib
models/phase2/: decel_regress_lin_mean.joblib  decel_regress_lin_peak.joblib  decel_regress_tree_mean.joblib  decel_regress_tree_peak.joblib  state_clf_dt_auxonly.joblib  state_clf_dt_full.joblib  state_clf_lda_auxonly.joblib  state_clf_lda_full.joblib  state_clf_lr_auxonly.joblib  state_clf_lr_full.joblib  state_clf_pca_lda_auxonly.joblib  (+3 more)
notebooks/: phase1_operational_states.ipynb  phase2_braking_analysis.ipynb
scripts/: 00_profile_data.py  01_preprocess.py  02_phase1_cluster.py  03_phase1_validate.py  04_phase2_events.py  05_phase2_state_classify.py  06_phase2_intensity.py  07_phase2_decel_regress.py  08_phase2_prefailure.py  build_notebooks.py  phase1_states.py  phase2_braking.py  phase2_intensity.py  preprocess.py  profile_data.py
tests/: test_braking.py  test_braking_v2.py  test_core.py  test_features.py  test_io.py  test_report.py  test_validation.py  test_windowing.py
(+34 files in other folders)
